fix: :lipstick: fix card image overflow when border radius is applied

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   background: $card-bg;
   border-radius: $border-radius;
+  overflow: hidden;
 }
 
 .card:hover {
